--- a/report/head.tex
+++ b/report/head.tex
@@ -162,6 +162,14 @@ Dr. Edwin \textsc{Brady} % Supervisor's Name
 % List of Figures
 \clearpage
 \listoffigures
+
+%Nice quote?
+%\begin{quote}
+%	\textit{``There are only two hard things in Computer Science: cache invalidation and naming things.''}
+%	\begin{flushright}
+%		Phil Karlton
+%	\end{flushright}
+%\end{quote}
 % Make changes to Intro after changing the order of sections!
 
 % Intro
@@ -173,7 +181,7 @@ Dr. Edwin \textsc{Brady} % Supervisor's Name
 % Tools
 \include{Tools}
 % ------ Main Content ------
-\include{Architecture}
+%\include{Architecture}
 %\include{ProtocolMonitor}
 \include{Solution}
 \include{ImplementingDHM}
@@ -189,6 +197,9 @@ Dr. Edwin \textsc{Brady} % Supervisor's Name
 % Conclusion
 \include{Conclusion}
 %Bibliography
+%\appendix
+%\chapter{1}
+%\chapter{2}
 \include{Bibliography}
 
 \end{document}
